# parakeet-candle

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/parakeet/: alignment.rs  attention.rs  audio.rs  cache.rs  conformer.rs  ctc.rs  mod.rs  model.rs  rnnt.rs  tokenizer.rs
