[package]
name = "parakeet-candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
accelerate-src = { version = "0.3.2", optional = true }
candle = { package = "candle-core", version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.5"
intel-mkl-src = { version = "0.8.1", optional = true }
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
symphonia = { version = "0.5.4", features = ["mp3", "aac"] }

[features]
default = []
accelerate = [
  "dep:accelerate-src",
  "candle/accelerate",
  "candle-nn/accelerate",
]
cuda = [
  "candle/cuda",
  "candle-nn/cuda",
]
cudnn = [
  "candle/cudnn",
  "candle-nn/cudnn",
]
metal = [
  "candle/metal",
  "candle-nn/metal",
]
mkl = [
  "dep:intel-mkl-src",
  "candle/mkl",
  "candle-nn/mkl",
]
